2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.md-nunit: Fix the path for Test.Rules.BadDesign.dll assembly in
	the unit tests.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* rules.md-nunit: Update unit tests to load assemblies in ../bin
	directory.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Gendarme.Rules.BadPractice to the build

2007-09-26  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* rules.xml: Added Naming rules to "all" and new "naming" ruleset.
	Added new "smells" ruleset.  Added "monoBCL" ruleset as part of the
	profiles task.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Smells: Merging GSoC 2007 work.
	* Makefile.am: Added Gendarme.Rules.Smells.

2007-09-13  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming: Merging GSoC 2007 work.
	* Makefile.am: Added Gendarme.Rules.Naming.

2007-03-12  Jb Evain  <jbevain@gmail.com>

	* Update to match the new rules interfaces.

2006-11-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Gendarme.Rules.Ui to the build.
	* rules.xml: Add UI rules to "all" and a new "ui" ruleset.
	* rules.mds: Add UI rules project to the solution.
	* tests.mds: Add UI unit tests project to the solution.

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
	* rules.xml: Disabling Gendarme.Rules.Correctness.dll until bug #79486
	is fixed.

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* rules.mds: New. (Sub-)solution file for MonoDevelop.
	* rules.md-unit: New. MonoDevelop NUnit project file.
	* tests.mds: New. (Sub-)solution file for MonoDevelop.

2006-06-19  Russell Morris  <russell@russellsprojects.com>

	* Makefile.am: Added Gendarme.Rules.Exceptions
	* rules.xml:  Added Gendarme.Rules.Exceptions entries

2006-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Added self-test target to promote compliance ;-)
